NJ: Command added to Debug AEM using eclipse.